add tabs, visible highlighter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <div id="navbarMenu" class="navbar-menu">
             <div class="navbar-end">
-              <span class="navbar-item">
+              <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
                     <i class="fa fa-home"></i>
@@ -36,7 +36,7 @@
                   <span>Home</span>
                 </a>
               </span>
-              <span class="navbar-item">
+              <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
                     <i class="fab fa-superpowers"></i>
@@ -44,7 +44,7 @@
                   <span>Examples</span>
                 </a>
               </span>
-              <span class="navbar-item">
+              <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
                     <i class="fa fa-book"></i>
@@ -52,7 +52,7 @@
                   <span>Documentation</span>
                 </a>
               </span>
-              <span class="navbar-item">
+              <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
                     <i class="fab fa-github"></i>
