--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
           <div class="navbar-brand">
             <a class="navbar-item logo-link">
-              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg" alt="epam logo">
+              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg" alt="EPAM home">
             </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
               <span></span>
@@ -31,7 +31,7 @@
               <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
-                    <span class="fa fa-home"></span>
+                    <span class="fa fa-home" aria-hidden="true"></span>
                   </span>
                   <span>Home</span>
                 </a>
@@ -39,7 +39,7 @@
               <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
-                    <span class="fab fa-superpowers"></span>
+                    <span class="fab fa-superpowers" aria-hidden="true"></span>
                   </span>
                   <span>Examples</span>
                 </a>
@@ -47,7 +47,7 @@
               <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
-                    <span class="fa fa-book"></span>
+                    <span class="fa fa-book" aria-hidden="true"></span>
                   </span>
                   <span>Documentation</span>
                 </a>
@@ -55,7 +55,7 @@
               <span class="navbar-item" tabindex="0">
                 <a class="button is-white is-outlined">
                   <span class="icon">
-                    <span class="fab fa-github"></span>
+                    <span class="fab fa-github" aria-hidden="true"></span>
                   </span>
                   <span>View Source</span>
                 </a>
@@ -152,9 +152,10 @@
           </pre>
       <p lang="la">Maecenas eleifend sollicitudin dui, faucibus sollicitudin augue cursus non. Ut finibus eleifend arcu ut vehicula. Mauris eu est maximus est porta condimentum in eu justo. Nulla id iaculis sapien.</p>
       <table>
+        <caption>Table with a content too generic for this caption</caption>
         <tr>
-          <td>Header</td>
-          <td>Header</td>
+          <th scope="col">Header</th>
+          <th scope="col">Header</th>
         </tr>
         <tr>
           <td>cell</td>
@@ -261,19 +262,19 @@
       <ul>
         <li data-target="pane-1" id="1" class="is-active">
           <a>
-            <span class="icon is-small"><span class="fa fa-image"></span></span>
+            <span class="icon is-small"><span class="fa fa-image" aria-hidden="true"></span></span>
             <span>Pictures</span>
           </a>
         </li>
         <li data-target="pane-3" id="3">
           <a>
-            <span class="icon is-small"><span class="fab fa-superpowers"></span></span>
+            <span class="icon is-small"><span class="fab fa-superpowers" aria-hidden="true"></span></span>
             <span>Team</span>
           </a>
         </li>
         <li data-target="pane-4" id="4">
           <a>
-            <span class="icon is-small"><span class="fa fa-film"></span></span>
+            <span class="icon is-small"><span class="fa fa-film" aria-hidden="true"></span></span>
             <span>Video</span>
           </a>
         </li>
@@ -740,7 +741,10 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 1</span>
+                  <span class="has-text-grey-light"><span class="fa fa-comments"></span>
+                   1
+                   <span class="visually-hidden">answer</span>
+                  </span>
                 </div>
               </div>
             </div>
@@ -762,7 +766,9 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 0</span>
+                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 0
+                   <span class="visually-hidden">answers</span>
+                </span>
                 </div>
               </div>
             </div>
@@ -784,7 +790,9 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 13</span>
+                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 13
+                  <span class="visually-hidden">answers</span>
+                </span>
                 </div>
               </div>
             </div>
@@ -806,7 +814,9 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 2</span>
+                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 2
+                  <span class="visually-hidden">answers</span>
+                </span>
                 </div>
               </div>
             </div>
@@ -828,7 +838,8 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 2</span>
+                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 2
+                  <span class="visually-hidden">answers</span>
                 </div>
               </div>
             </div>
@@ -850,7 +861,8 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 2</span>
+                  <span class="has-text-grey-light"><span class="fa fa-comments"></span> 2
+                  <span class="visually-hidden">answers</span>
                 </div>
               </div>
             </div>
@@ -956,116 +968,7 @@
     </div>
   </div>
 
-  <!-- <div class="section">
-    <div class="container">
-      <div class="columns is-multiline">
-        <div class="column is-one-third">
-          <div class="notification media has-background-white">
-            <div class="media-left">
-              <span class="icon">
-                <span class="has-text-warning fas fa-columns fa-lg"></span>
-              </span>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <div class="title is-size-4">Columns</div>
-                <p class="is-size-5 subtitle">
-                  The power of <strong>Flexbox</strong> in a simple interface
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="notification has-background-white media">
-            <div class="media-left">
-              <span class="icon has-text-info">
-                <span class="fab fa-lg fa-wpforms"></span>
-              </span>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <div class="title is-size-4">Form</div>
-                <p class="is-size-5 subtitle">
-                  The indispensable <strong>form controls</strong>, designed for maximum clarity
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="notification has-background-white media">
-            <div class="media-left">
-              <span class="icon has-text-danger">
-                <span class="fas fa-lg fa-cubes"></span>
-              </span>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <h1 class="title is-size-4">Components</h1>
-                <p class="is-size-5 subtitle">
-                  Advanced multi-part components with lots of possibilities
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="notification has-background-white media">
-            <div class="media-left">
-              <span class="icon has-text-grey">
-                <span class="fas fa-lg fa-cogs"></span>
-              </span>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <div class="title is-size-4">Modifiers</div>
-                <p class="is-size-5 subtitle">
-                  An <strong>easy-to-read</strong> naming system designed for humans
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="notification has-background-white media">
-            <div class="media-left">
-              <span class="icon has-text-primary">
-                <span class="fas fa-lg fa-warehouse"></span>
-              </span>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <div class="title is-size-4">Layout</div>
-                <p class="is-size-5 subtitle">
-                  Design the <strong>structure</strong> of your webpage with these CSS classes
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="notification has-background-white media">
-            <div class="media-left">
-              <span class="icon has-text-danger">
-                <span class="fas fa-lg fa-cube"></span>
-              </span>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <div class="title is-size-4">Elements</div>
-                <p class="is-size-5 subtitle">
-                  Essential interface elements that only require a <strong>single CSS class</strong>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <div class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="columns">
         <div class="column is-3 is-offset-2">
@@ -1106,15 +1009,40 @@
 
       <div class="content has-text-centered">
         <div class="soc">
-          <a><span class="fab fa-github-alt fa-2x"></span></a>
-          <a><span class="fab fa-youtube fa-2x"></span></a>
-          <a><span class="fab fa-facebook fa-2x"></span></a>
-          <a><span class="fab fa-twitter fa-2x"></span></a>
+          <a href="#" >
+            <span class="fab fa-github-alt fa-2x" aria-hidden="true"></span>
+            <span class="visually-hidden">Official Github repository</span>
+          </a>
+          <a href="#" >
+            <span class="fab fa-youtube fa-2x" aria-hidden="true"></span>
+            <span class="visually-hidden">Official Youtube channel</span>
+          </a>
+          <a href="#" >
+            <span class="fab fa-facebook fa-2x" aria-hidden="true"></span>
+            <span class="visually-hidden">Official Facebook community</span>
+          </a>
+          <a href="#" >
+            <span class="fab fa-twitter fa-2x" aria-hidden="true"></span>
+            <span class="visually-hidden">Official Twitter account</span>
+          </a>
         </div>
-        <p>The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</p>
+        <p>The source code is licensed 
+          <a 
+            href="http://opensource.org/licenses/mit-license.php"
+            target="_blank"
+          >
+            MIT 
+            <span class="fas fa-external-link-alt fa-xs" aria-hidden="true">
+              <span class="visually-hidden">
+                Opens in new tab
+              </span>
+            </span>
+          </a>
+          .
+        </p>
       </div>
     </div>
-  </div>
+  </footer>
 
   <div id="modal-card" class="modal modal-fx-3dSlit">
     <div class="modal-background"></div>
