--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         </section>
       </div>
 
-      <section class="hero has-background-grey-light">
+      <section class="hero background-grey-light">
         <div class="container features">
           <div class="section-heading has-text-centered">
             <h2 class="title is-2">Three key features</h2>
@@ -602,7 +602,7 @@
         </div>
       </div>
 
-      <div class="section has-background-grey-lighter">
+      <div class="section background-grey-light">
         <div class="container has-text-centered">
           <div class="section-heading has-text-centered">
             <div class="title is-2">Upcoming events</div>
@@ -735,7 +735,7 @@
         </div>
       </div>
 
-      <div class="section has-background-grey-lighter">
+      <div class="section background-grey-light">
         <div class="container">
           <div class="section-heading has-text-centered">
             <div class="title is-2">Photos from past events</div>
