--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
                       </div>
                     </div>
                     <div class="media-right">
-                      <span class="has-text-grey-light">
+                      <span class="text-grey-light">
                         <span class="fa fa-comments" aria-hidden="true"></span>
                         1
                       </span>
@@ -1010,7 +1010,7 @@
                       </div>
                     </div>
                     <div class="media-right">
-                      <span class="has-text-grey-light">
+                      <span class="text-grey-light">
                         <span class="fa fa-comments" aria-hidden="true"></span>
                         0
                       </span>
@@ -1041,7 +1041,7 @@
                       </div>
                     </div>
                     <div class="media-right">
-                      <span class="has-text-grey-light">
+                      <span class="text-grey-light">
                         <span class="fa fa-comments" aria-hidden="true"></span>
                         13
                       </span>
@@ -1069,7 +1069,7 @@
                       </div>
                     </div>
                     <div class="media-right">
-                      <span class="has-text-grey-light">
+                      <span class="text-grey-light">
                         <span class="fa fa-comments" aria-hidden="true"></span>
                         2
                       </span>
@@ -1100,7 +1100,7 @@
                       </div>
                     </div>
                     <div class="media-right">
-                      <span class="has-text-grey-light">
+                      <span class="text-grey-light">
                         <span class="fa fa-comments" aria-hidden="true"></span>
                         2
                       </span>
@@ -1128,7 +1128,7 @@
                       </div>
                     </div>
                     <div class="media-right">
-                      <span class="has-text-grey-light">
+                      <span class="text-grey-light">
                         <span class="fa fa-comments" aria-hidden="true"></span>
                         2
                       </span>
