--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         <div class="tabs is-boxed is-centered main-menu" id="nav">
           <ul>
             <li data-target="pane-1" id="1" class="is-active">
-              <a href="#">
+              <a href="#nav">
                 <span class="icon is-small" aria-hidden="true">
                   <span class="fa fa-image"></span>
                 </span>
@@ -392,7 +392,7 @@
               </a>
             </li>
             <li data-target="pane-3" id="3">
-              <a href="#">
+              <a href="#nav">
                 <span class="icon is-small" aria-hidden="true">
                   <span class="fab fa-superpowers"></span>
                 </span>
@@ -400,7 +400,7 @@
               </a>
             </li>
             <li data-target="pane-4" id="4">
-              <a href="#">
+              <a href="#nav">
                 <span class="icon is-small" aria-hidden="true">
                   <span class="fa fa-film"></span>
                 </span>
