Fixes according to the feedback

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <a href="#maincontent" class="visually-hidden skip-link" tabindex="1">
       Skip to main content
     </a>
-    <div class="hero hero-bg is-fullheight">
-      <header class="hero-head">
+    <header class="hero hero-bg is-fullheight">
+      <div class="hero-head">
         <div class="navbar">
           <div class="container">
             <div class="navbar-brand">
@@ -71,7 +71,7 @@
             </nav>
           </div>
         </div>
-      </header>
+      </div>
 
       <section class="hero-body">
         <div class="container has-text-centered">
@@ -95,7 +95,7 @@
           </div>
         </div>
       </section>
-    </div>
+    </header>
     <main id="maincontent">
       <nav aria-label="breadcrumbs" class="breadcrumbs container">
         <ol class="list-unstyled list-inline">
@@ -384,28 +384,28 @@
         <div class="tabs is-boxed is-centered main-menu" id="nav">
           <ul>
             <li data-target="pane-1" id="1" class="is-active">
-              <a href="#nav">
+              <button class="tab button">
                 <span class="icon is-small" aria-hidden="true">
                   <span class="fa fa-image"></span>
                 </span>
                 <span>Pictures</span>
-              </a>
+              </button>
             </li>
             <li data-target="pane-3" id="3">
-              <a href="#nav">
+              <button class="tab button">
                 <span class="icon is-small" aria-hidden="true">
                   <span class="fab fa-superpowers"></span>
                 </span>
                 <span>Team</span>
-              </a>
+              </button>
             </li>
             <li data-target="pane-4" id="4">
-              <a href="#nav">
+              <button class="tab button">
                 <span class="icon is-small" aria-hidden="true">
                   <span class="fa fa-film"></span>
                 </span>
                 <span>Video</span>
-              </a>
+              </button>
             </li>
           </ul>
         </div>
@@ -1371,7 +1371,7 @@
   </div> -->
     </main>
 
-    <div class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="columns">
           <div class="column is-3 is-offset-2">
@@ -1439,7 +1439,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </footer>
 
     <div id="modal-card" class="modal modal-fx-3dSlit">
       <div class="modal-background"></div>
